# bookstore

./: README.md  pyproject.toml
bookstore/: exceptions.py  models.py  serializers.py  urls.py  views.py
bookstore/migrations/: 0001_initial.py
project/: docker-compose.yml  settings.py  urls.py
